# contram-ticket-automated

./: Cargo.toml  users.json
.github/workflows/: build.yml  rust-clippy.yml
src/: bot.rs  main.rs  user.rs  util.rs
src/utils/: booking.rs  file_manager.rs  mod.rs
